# get-post

./: .gitignore  README.md  cors.py  options.py  pyproject.toml  server.py
src/: examples.html  index.html
src/scss/: global.scss
